# GW2Optimizer

./: .ci-trigger  .cleanup_prs.json  .editorconfig  .env.example  .env.production.example  .env.staging  .gitattributes  .gitignore  .gitleaks.toml  .playwright.json  .pre-commit-config.yaml  .prs_deps.json  .prs_open.json  AUDIT_STRUCTURE_PLAN.md  CHANGELOG.md  CHANGELOG_v1.1.0.md  CHANGELOG_v4.0.0.md  CHEATSHEET.md  CI_CD_REPORT_v1.5.0.md  CI_CD_REPORT_v1.6.0.md  CI_CD_VALIDATION_v1.1.0.md  CI_CD_VALIDATION_v1.4.0.md  CLEANUP_PLAN.md  CLEANUP_REPORT_20251105-1125.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORRECTIONS_DETAILLEES.md  COVERAGE_ROADMAP.md  DEPLOYMENT_SUMMARY_v1.1.0.txt  DOC_INDEX.md  ENGINE_IMPLEMENTATION_COMPLETE.md  ETAT_REEL_PROJET.md  EXECUTIVE_SUMMARY_v1.4.0.md  FINAL_RELEASE_REPORT.md  FINAL_REPORT_v1.5.0.md  FINAL_REPORT_v1.6.0.md  FINAL_STATUS_v1.4.0.md  FINAL_VALIDATION_v1.1.0.md  FINAL_VALIDATION_v1.2.0.md  FINAL_VALIDATION_v1.3.0.md  (+83 more)
backend/: .coveragerc  .dockerignore  .env.example  .env.production.example  .env.test  .flake8  BRANCH_PROTECTION_TEST.md  Dockerfile  alembic.ini  check_test_user.py  check_users.py  coverage.json  create_test_user.py  init_db.py  init_db_script.py  init_db_with_migrations.py  init_sqlite_db.py  list_routes.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  reset_test_user.py  reset_test_user_v2.py  setup.py  test_db_connection.py  test_endpoints.sh  test_output.txt  uvicorn.out
backend/alembic/: env.py
backend/alembic/versions/: 232b6ca2fb3c_add_builds_and_teams_tables_with_.py  3940a8aceff4_initial_migration_users_table.py  56421d6d32db_initial_database_schema_with_gw2_.py  8e7b5e7c0f12_create_build_suggestions_table.py  9d7f0d4f7b9e_add_user_extra_columns_and_login_history.py  a1b2c3d4e5f6_set_server_defaults_users_timestamps.py
backend/app/: __init__.py  exceptions.py  locustfile.py  main.py  metrics_ai.py  middleware.py
backend/app/agents/: __init__.py  analyst_agent.py  base.py  build_advisor_agent.py  build_equipment_optimizer.py  meta_agent.py  optimizer_agent.py  recommender_agent.py  synergy_agent.py  team_commander_agent.py  team_strategy_agent.py
backend/app/ai/: __init__.py  context.py  core.py  feedback.py  trainer.py
backend/app/api/: __init__.py  ai.py  ai_analysis.py  ai_feedback.py  ai_optimizer.py  ai_simple.py  auth.py  auth_utils.py  builds.py  builds_db.py  builds_history.py  chat.py  deps.py  export.py  gw2_sync.py  health.py  learning.py  meta.py  saved_builds.py  scraper.py  sentry_debug.py  sync.py  team_commander.py  teams.py  teams_db.py  users.py  websocket_mcm.py
backend/app/core/: __init__.py  cache.py  circuit_breaker.py  config.py  logging.py  metrics.py  performance.py  redis.py  security.py  test_auth.py
backend/app/db/: __init__.py  base.py  base_class.py  init_db.py  models.py  session.py  types.py
backend/app/engine/: __init__.py  damage.py
backend/app/learning/: __init__.py
backend/app/middleware/: performance.py
backend/app/models/: __init__.py  build.py  build_suggestion.py  chat.py  game.py  learning.py  saved_build.py  team.py  team_strategy.py  token.py  user.py
backend/app/schemas/: builds.py  gw2_sync.py  saved_build.py  token.py
backend/app/services/: __init__.py  ai_service.py  auth_service.py  base.py  build_analysis_service.py  build_service.py  build_service_db.py  build_service_stateless.py  chat_code.py  email_service.py  etl_gw2.py  game_version_tracker.py  gear_optimization_service.py  gear_prefix_validator.py  gear_preset_service.py  gw2_api.py  gw2_api_client.py  gw2_chat_code.py  gw2_data_ingestion_service.py  gw2_data_service.py  gw2_data_store.py  gw2_sync_service.py  mcm_analytics.py  meta_build_catalog.py  meta_rag_service.py  mistral_ai.py  recommender_agent.py  saved_build_service.py  scheduler.py  skill_analysis_service.py  synergy_analyzer.py  team_service.py  team_service_db.py  url_analysis_service.py  user_service.py
backend/app/tasks/: scheduler.py
backend/app/workflows/: __init__.py  base.py  build_optimization_workflow.py  learning_workflow.py  meta_analysis_workflow.py  team_analysis_workflow.py
backend/data/: meta_builds_wvw.json
backend/data/gw2/: metadata.json  professions.json  traits.json  upgrade_components.json
backend/docs/: data_collector.md
backend/scripts/: benchmark_performance.py  ci_supervisor.py  ci_supervisor_v29.py  debug_scrapers.py  demo_ultimate_engine.py  gw2_dump_professions.py  gw2_full_import.py  init_test_db.py  init_test_db_simple.py  mark_legacy_tests.py  run_tests.sh  sync_meta_builds.py  test_api_damage_estimation.py  test_api_with_auth.py  test_damage_estimation.py  test_damage_module.py  test_full_damage_analysis.py  test_gear_solver.py  test_langchain_web_search.py  test_outnumber_squad.py  test_real_ai.py  test_team_commander_api.py  train_advisor.py  validate_tests.sh  verify_hardstuck_stats.py
backend/tests/: README.md  conftest.py  debug_db.py  factories.py  test_agents.py  test_ai_core.py  test_auth.py  test_build_advisor_agent.py  test_build_analysis_full.py  test_build_equipment_optimizer.py  test_build_service.py  test_builds.py  test_config.py  test_db_types.py  test_debug.py  test_exporter.py  test_gear_prefix_registry.py  test_gear_prefix_validator.py  test_gw2_api_client.py  test_gw2_data_service.py  test_gw2_relics.py  test_gw2skill_parser_compact.py  test_health.py  test_learning.py  test_meta_agent.py  test_meta_analysis_workflow.py  test_meta_ingest.py  test_meta_rag_service.py  test_parser.py  test_rotation_simulator.py  test_scraper.py  test_synergy_analyzer.py  test_team_commander_agent.py  test_team_commander_rag.py  test_teams.py  test_websocket_mcm.py  test_workflows.py
backend/tests/ai/: test_feedback_unit.py
backend/tests/api/: test_ai_feedback.py  test_build_endpoints.py  test_security_headers.py  test_sync_endpoint.py  test_team_endpoints.py
backend/tests/connectors/: test_gw2_api_coverage.py
backend/tests/core/: test_auth.py  test_security.py
backend/tests/integration/: test_chat_circuit_breaker.py  (+2 more)
(+516 files in other folders)
