[tool.poetry]
name = "gw2optimizer-backend"
version = "0.1.0"
description = "Backend for GW2Optimizer - Outil d'optimisation pour Guild Wars 2"
authors = ["GW2Optimizer Team"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.121.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
sqlalchemy = "^2.0.20"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"
PyJWT = "^2.10.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.19"
python-dotenv = "^1.0.0"
alembic = "^1.12.0"
aiohttp = "^3.9.0"
aiosqlite = "^0.19.0"
redis = "^5.0.0"
httpx = "^0.28.1"
slowapi = "^0.1.9"
email-validator = "^2.3.0"
beautifulsoup4 = "^4.14.2"
aiofiles = "^25.1.0"
apscheduler = "^3.11.0"
bcrypt = "^5.0.0"
h11 = ">=0.16.0,<0.18.0"
asyncpg = "^0.30.0"
numpy = "^2.3.4"
scikit-learn = "^1.3.0"
pandas = "^2.0.0"
starlette = ">=0.49.1"
prometheus-client = "^0.23.1"
prometheus-fastapi-instrumentator = "^7.1.0"
sentry-sdk = { extras = ["fastapi"], version = "^2.46.0" }
structlog = "^25.5.0"
python-json-logger = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-asyncio = "^0.21.2"
pytest-cov = "^4.1.0"
pytest-rerunfailures = "^13.0"
black = "^24.3.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
types-passlib = "^1.7.7.20250602"

[tool.poetry.group.lint.dependencies]
ruff = "^0.14.6"
black = "^24.3.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\\.pyi?$'
extend-exclude = '''
/( 
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
force-exclude = 'app/core/config\.py'

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
# Temporarily disable strict checks
warn_unused_ignores = false
warn_redundant_casts = false
no_implicit_optional = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "ollama.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "bs4.*"
ignore_missing_imports = true

# Progressive typing: temporarily ignore non-critical packages
[[tool.mypy.overrides]]
module = [
    "app.api.*",
    "app.services.*",
    "app.learning.*",
    "app.workflows.*",
    "app.agents.*",
    "app.ai.*",
    "app.meta.*",
    "app.db",
    "app.db.*",
    "app.models.*",
    "app.core.*",
    "app.middleware",
    "app.locustfile",
    "app.metrics_ai",
]
ignore_errors = true

# Critical modules enforced strictly (override ignores above)
[[tool.mypy.overrides]]
module = [
    "app.api.auth",
    "app.services.auth_service",
    "app.core.security",
    "app.core.config",
    "app.main",
]
strict = true
disallow_untyped_defs = true
ignore_errors = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["F"]  # Focus on pyflakes for now
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__ for re-exports
"**/tests/**" = ["F401", "F841"]  # Be more permissive in tests

[tool.ruff.format]
# Match black's format
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# Dependency graph refresh - ven. 14 nov. 2025 11:44:41 CET
# Phase 1 audit confirmed: ecdsa absent, python-multipart updated to 0.0.19
# GitHub alerts are stale - forcing refresh

